[package]
name = "ha_ldap_auth"
version = "0.1.0"
authors = ["Michael Jenkins <jenkinsmichpa@gmail.com>"]
edition = "2021"
description = "Performs LDAP searches to provide command line authentication to Home Assistant"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
lazy_static = "1.5.0"
ldap3 = { version = "0.11.5", features = ["sync", "tls-rustls"], default-features = false }
regex = "1.11.1"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true