[package]
name = "ha_ldap_auth"
version = "0.1.0"
authors = ["Michael Jenkins <jenkinsmichpa@gmail.com>"]
edition = "2021"
description = "Performs LDAP searches to provide command line authentication to Home Assistant"

[dependencies]
clap = { version = "4.5.49", features = ["derive"] }
lazy_static = "1.5.0"
ldap3 = { version = "0.12.1", features = ["sync", "tls-rustls", "rustls-provider"], default-features = false }
regex = "1.12.2"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
